# fizgig-api-extractor

./: .bumpversion.toml  .gitignore  CLAUDE.md  LICENSE  README.md  VERSION_MANAGEMENT.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
api_extractor/: __init__.py  cli.py  config.py  converter.py  exporter.py  fetcher.py  field_mapper.py  loader.py  parser_openapi.py  parser_postman.py  templating.py  treeview.py  utils.py
api_extractor/resources/templates/: default.html
docs/: CONFIG.md
docs/superpowers/specs/: 2026-03-24-url-config-templating-design.md
tests/: __init__.py  test_cli.py  test_cli_validate.py  test_config.py  test_converter.py  test_exporter.py  test_fetcher.py  test_field_mapper.py  test_helpers.py  test_loader.py  test_parser_openapi.py  test_parser_postman.py  test_templating.py  test_test_helpers.py  test_treeview.py  test_utils.py
tests/fixtures/: sample_openapi.yaml  sample_postman.json
